--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,4 @@
-
+SetEnv APPLICATION_ENV develoment
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
