--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -7,6 +7,7 @@ bootstrap.class = "Bootstrap"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 appnamespace = "Jobeet_"
+resources.frontController.params.prefixDefaultModule = "1"
 
 [staging : production]
 
