--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,6 +8,7 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 appnamespace = "Jobeet_"
 resources.frontController.params.prefixDefaultModule = "1"
+resources.db.adapter = "PDO_Mysql"
 
 [staging : production]
 
@@ -19,3 +20,7 @@ phpSettings.display_errors = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+resources.db.params.username = "[username]"
+resources.db.params.password = "[password]"
+resources.db.params.host = "[hostname]"
+resources.db.params.dbname = "jobeet"
