--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -4,10 +4,16 @@ phpSettings.display_errors = 0
 includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
-resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
+;resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 appnamespace = "Jobeet_"
 resources.db.adapter = "PDO_Mysql"
+
+;; added day03
+resources.frontController.moduledirectory = APPLICATION_PATH "/modules"
+resources.frontController.defaultmodule = "job"
+resources.modules[] =
+
 
 [staging : production]
 
