--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,11 +8,14 @@ bootstrap.class = "Bootstrap"
 resources.frontController.params.displayExceptions = 0
 appnamespace = "Jobeet_"
 resources.db.adapter = "PDO_Mysql"
+resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 
-;; added day03
+;; added day04
 resources.frontController.moduledirectory = APPLICATION_PATH "/modules"
 resources.frontController.defaultmodule = "job"
+resources.frontController.params.prefixDefaultModule = 1
 resources.modules[] =
+resources.view[] =
 
 
 [staging : production]
